Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102139

C4996 MSVC deprecation warnings are treated as an error

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 6.4.0 Beta1
    • 6.4.0 FF
    • Data Visualization
    • None
    • 8cdc2cc859 (qt/qtdatavis3d/dev) 8cdc2cc859 (qt/tqtc-qtdatavis3d/dev)

    Description

      error C2220: the following warning is treated as an error
      agent:2022/03/30 02:46:48 build.go:394: \Users\qt\work\qt\qtdatavis3d\src\datavisualization\utils\scatterobjectbufferhelper.cpp(101): warning C4996: 'operator *': Extend the QVector3D to a QVector4D before multiplying
      agent:2022/03/30 02:46:48 build.go:394: \Users\qt\work\qt\qtdatavis3d\src\datavisualization\utils\scatterobjectbufferhelper.cpp(144): warning C4996: 'operator *': Extend the QVector3D to a QVector4D before multiplying
      agent:2022/03/30 02:46:48 build.go:394: \Users\qt\work\qt\qtdatavis3d\src\datavisualization\utils\scatterobjectbufferhelper.cpp(146): warning C4996: 'operator *': Extend the QVector3D to a QVector4D before multiplying
      agent:2022/03/30 02:46:48 build.go:394: \Users\qt\work\qt\qtdatavis3d\src\datavisualization\utils\scatterobjectbufferhelper.cpp(337): warning C4996: 'operator *': Extend the QVector3D to a QVector4D before multiplying
      agent:2022/03/30 02:46:48 build.go:394: \Users\qt\work\qt\qtdatavis3d\src\datavisualization\utils\scatterobjectbufferhelper.cpp(360): warning C4996: 'operator *': Extend the QVector3D to a QVector4D before multiplying
      

      Build log: https://testresults.qt.io/logs/qt/qtdatavis3d/a9de29d582c4e86d51ed019c4e4e5dd7c1763ab8/WindowsWindows_10_21H2x86_64WindowsWindows_10_21H2x86_64MSVC2019qtci-windows-10_21H2-x86_64-51-59578aConan_DebugAndRelease_Sccache_WarningsAreErrors/2cd635e9e2b5403251e82736f8e178a0c1dd509e/build_1648608202/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtdatavis3d/tasks/1648608187

      Tested changes (refs/builds/qtci/dev/1648608137):

      https://codereview.qt-project.org/c/qt/qtdatavis3d/+/403249/2 Update dependencies on 'dev' in qt/qtdatavis3d

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tokorpip Tomi Korpipää
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes