Fix errors caused by dependency update

Fixes: QTBUG-102139
Change-Id: Id9bc508f714a51915fd4d8f67e36561942e19c74
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>